--- a/my-react-app/package.json
+++ b/my-react-app/package.json
@@ -81,6 +81,15 @@
 
 
 
+"leaflet": "^1.9.4",
+  
+
+
+
+  
+
+
+
 "react": "^19.1.1",
   
 
@@ -91,6 +100,24 @@
 
 
 "react-dom": "^19.1.1",
+  
+
+
+
+  
+
+
+
+"react-leaflet": "^5.0.0",
+  
+
+
+
+  
+
+
+
+"react-router-dom": "^7.8.2",
   
 
 
