updated shop page with design

--- a/Requirements.txt
+++ b/Requirements.txt
@@ -2,3 +2,15 @@ Node js
 Node express
 
 node nodemon -D
+
+
+React js
+
+"dotenv": "^17.2.1",
+"react-app-rewired": "^2.2.1",
+"react-scripts": "^5.0.1"
+
+
+
+
+
