--- a/Server/package.json
+++ b/Server/package.json
@@ -17,7 +17,8 @@
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.19.0",
-    "mongoose": "^8.18.0"
+    "mongoose": "^8.18.0",
+    "xml2js": "^0.6.2"
   },
   "devDependencies": {
     "nodeman": "^1.1.2",
